# template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  project.bokken  tsconfig.json
darwin/: main.cpp
linux/: main.cpp
src/: index.tsx
types/: audio.d.ts  canvas.d.ts  engine.d.ts  gameObject.d.ts  index.d.ts  input.d.ts  log.d.ts  physics.d.ts  renderer.d.ts  scene.d.ts  window.d.ts
windows/: main.cpp
